src/objects/Call_Record__c.object
<CustomObject>
    <fields>
        <fullName>Diagnostics_Used_in_Diagnosis__c</fullName>
        <inlineHelpText>Use this field to list all diagnositic methods used before the patient was referred for the procedure.</inlineHelpText>
        <label>Diagnostics Used in Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>Angio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Used_in_Procedure__c</fullName>
        <inlineHelpText>Use this field to list all diagnostic techniques used during the procedure</inlineHelpText>
        <label>Diagnostics Used in Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>TOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluoro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Diagnostics__c</fullName>
        <label>Diagnostics</label>
        <picklist>
            <controllingField>Product_Group_Proced_Therapy__c</controllingField>
            <picklistValues>
                <fullName>Reflexion Spiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lasso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnostics_used__c</fullName>
        <label>Diagnostics used</label>
        <picklist>
            <picklistValues>
                <fullName>TOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnostics_used_in_Diganosis__c</fullName>
        <label>Diagnostics used in Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>TOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuromodulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EP_Procedure_Type__c</fullName>
        <label>EP Procedure Type</label>
        <picklist>
            <picklistValues>
                <fullName>PVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atrial Focal Tach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atrial Flutter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory Pathway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ejection_Fraction_CRT_on__c</fullName>
        <label>Ejection Fraction - CRT on</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ejection_Fraction_MPP_on__c</fullName>
        <label>Ejection Fraction - MPP on</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ejection_Fraction_Pre_Implant__c</fullName>
        <label>Ejection Fraction - Pre Implant</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ejection_Fraction__c</fullName>
        <label>Ejection Fraction</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ensite_Precision_Mapping_LMR_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ensite Precision Mapping LMR Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Epiducer_used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Epiducer used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Plan_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Plan Activity</label>
        <referenceTo>ExecutionPlanActivity__c</referenceTo>
        <relationshipLabel>Call Records</relationshipLabel>
        <relationshipName>Call_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expanded_Model_Demonstration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1. Absorbable Components
2. Pulley Mechanism/&quot;Cinching&quot; technique</inlineHelpText>
        <label>Expanded Model Demonstration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_City__c</fullName>
        <formula>Facility_Practitioner__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Country__c</fullName>
        <formula>Facility_Practitioner__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <formula>Facility_Practitioner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Post_Code__c</fullName>
        <formula>Facility_Practitioner__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Records - Facilities</relationshipLabel>
        <relationshipName>Call_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_SAP_Number__c</fullName>
        <formula>Facility_Practitioner__r.SJM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility SAP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_State__c</fullName>
        <formula>Facility_Practitioner__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Street__c</fullName>
        <formula>Facility_Practitioner__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_MPP_Programming_Method__c</fullName>
        <inlineHelpText>Include comments on why this was chosen</inlineHelpText>
        <label>Final MPP Programming Method</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fluoro_Time_mins__c</fullName>
        <label>Fluoro Time (mins)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Due_Date_Time__c</fullName>
        <label>Follow Up Due Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Physician_Clinic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow Up Physician or Clinic</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Records (Follow Up Physician or Clinic)</relationshipLabel>
        <relationshipName>Call_Records2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Go_to_Next_Call__c</fullName>
        <formula>IF( ISBLANK(Next_Call_Record_ID__c) ,&apos;n/a&apos; ,HYPERLINK(&apos;/&apos;+Next_Call_Record_ID__c, &apos;Click Here&apos; ,&apos;_top&apos;  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go to Next Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HV_of_Patients__c</fullName>
        <label>HV # of Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Many__c</fullName>
        <inlineHelpText>Use this field to list how many devices were used in this case.</inlineHelpText>
        <label>How Many</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPG__c</fullName>
        <label>IPG</label>
        <picklist>
            <controllingField>Procedure__c</controllingField>
            <picklistValues>
                <fullName>Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accent MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accent MRI RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accent RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allure Quadra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthem RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assurity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlas+ VR-C, Model V-193C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse DR CD2277-36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse DR CD2277-36Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse DR CD2377-36C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse DR CD2377-36QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse VR CD1277-36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse VR CD1277-36Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse VR CD1377-36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse VR CD1377-36C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse VR CD1377-36Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellipse VR CD1377-36QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eon C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eon Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura DR CD2259-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura DR CD2259-40Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura DR CD2359-40C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura DR CD2359-40QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura VR CD1259-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura VR CD1259-40Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortify Assura VR CD1359-40</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_certify_this_indivdual__c</fullName>
        <label>Certified for OCT cases with</label>
        <picklist>
            <picklistValues>
                <fullName>C7xr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illumien OCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illumien OPTIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTISi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Illumien_OPTIS_OPTISi_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Illumien/OPTIS/OPTISi Set Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Service_Topic__c</fullName>
        <label>In-Service Topic</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>CRM	12 lead ECG Interpretation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	 Advanced ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Advanced Pacemaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Basic ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Basic Pacemaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	 CRT Therapy/Optimization/MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	 Implant Procedure – CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Implant Procedure – PPM/ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Merlin.net – for Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Merlin.net – for Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	MRI Conditional Overview – ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	 MRI Conditional Overview – PPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	MRI for Radiation/Oncology Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM	Paced ECG Interpretation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <picklist>
            <controllingField>Procedure__c</controllingField>
            <picklistValues>
                <fullName>Aortic Graft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Fistula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carotid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVAR/TEVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fenestrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDA Embol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Mammary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membranous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muscular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paravalvular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Vein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renal Embol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scimitar Syndrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splenic Artery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subclavian Artery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVG Anuerysm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testicular Embol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warfarin Contra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inerting_and_Removing_Catheter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inerting and Removing Catheter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions_for_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1. Indications
 2. Warnings
 3. Precautions
 4. Special patient populations
 5. Recommendations for device and patient outcomes
 6. Adverse events</inlineHelpText>
        <label>Instructions for Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_case_a_Cryo_Redo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the patient has previously had an ablation procedure using MDT CryoAblation technology.</inlineHelpText>
        <label>Is this case a Cryo Redo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KSM__c</fullName>
        <label>Sales Message</label>
        <picklist>
            <controllingField>Campaign__c</controllingField>
            <picklistValues>
                <fullName>CRM -  10/10/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 10 Years longevity, 10cc Size, up to 10 Year Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 18% relative reduction in all-cause mortality with QuartetTM LV lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 19% more MPP patients were classified responders vs. conventional pacing.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 2.1 x overall mortality reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 87% LOWER HOSPITALIZATION COSTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 8F Addition to the optim ICD lead family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 99.3% freedom from all-cause mechanical failure @ 5 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 99.8% freedom from insulation abrasion @ 5 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Back to basics – ICD’s save lives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM -  Capture a larger area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Designed for the MRI Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Earlier realisation of therapy benefits; sustained to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM -  Engage areas around scar tissue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Expanded Durata Data post 2014 HRS delivers positive long term survivability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - High power scanning of up to 4W/kg with no zone restrictions.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HRS Class 1A indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HV ICD system has received CE Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Identify patients at risk for stroke earlier with clinically proven AT/AF diagnostic tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Improve CRT Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM -  Improved Patient Management.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM -  Improve haemodynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM -  Improve pattern of depolarisation/repolarisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM -  Improve resynchronisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Increase clinical efficiency at implant and follow-up with wireless, RF telemetry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - INCREASED SURVIVAL COMPARED TO BIPOLAR CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Invited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LV_Lead_Position__c</fullName>
        <inlineHelpText>Comments and image if available</inlineHelpText>
        <label>LV Lead Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LV_ofPatients__c</fullName>
        <label>LV # of Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_1__c</fullName>
        <label>Lead - 1</label>
        <picklist>
            <controllingField>Procedure__c</controllingField>
            <picklistValues>
                <fullName>DBS - 4 Channel 0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS - 4 Channel 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isoflex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamitrode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optisense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Sorin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percutaneous - Octrode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percutaneous - Quatrode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quartet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quickflex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S - Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendril</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendril MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD - Cervical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD - Thoracic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD - Lumbar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD - Sacral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>